# profwasm

./: Cargo.toml  README.md  spin.toml
profwasm/: Cargo.toml  spin.toml
profwasm/config/: runtime-config.toml
profwasm/src/: lib.rs
profwasm/static/: four.txt  index.html  one.txt  style.css  three.txt  two.txt
src/: lib.rs
static/: index.html
